--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,3 +7,6 @@
 @import "style/splash";
 @import "style/login";
 @import "style/home";
+@import "style/hadith";
+@import "style/quranlist";
+@import "style/qurandetail";
