--- a/assets/scss/style/_hadith.scss
+++ b/assets/scss/style/_hadith.scss
@@ -69,7 +69,7 @@
           color: $dark;
           margin-bottom: 12px;
           p {
-            font-family: "Scheherazade", serif;
+            font-family: arabicfont;
             font-size: 20px;
             text-align: right;
             line-height: 30px;
