--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,2 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Mukta:wght@300;400;500;600;700&family=Scheherazade:wght@400;700&family=Space+Mono&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
+@font-face {
+  font-family: arabicfont;
+  src: url("../fonts/LPMQ.ttf");
+}
