--- a/assets/scss/style/_qurandetail.scss
+++ b/assets/scss/style/_qurandetail.scss
@@ -59,10 +59,10 @@
         border-bottom-right-radius: 10px;
       }
       .arabic {
-        font-family: "Scheherazade", serif;
+        font-family: arabicfont;
         text-align: right;
         color: $darker;
-        font-size: 18px;
+        font-size: 16px;
         line-height: 28px;
       }
       .latin {
