form cari ayat al quran

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -815,8 +815,46 @@ select option {
   font-size: 13px;
 }
 
+.detail-quran-wrapper .jump-verse {
+  -webkit-box-shadow: -5px 0 16px rgba(0, 0, 0, 0.07);
+          box-shadow: -5px 0 16px rgba(0, 0, 0, 0.07);
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 375px;
+  margin: auto;
+  height: 70px;
+  background-color: #00afb9;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.detail-quran-wrapper .jump-verse input {
+  background-color: white;
+  width: 300px;
+  height: 40px;
+}
+
+.detail-quran-wrapper .jump-verse button {
+  width: 40px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+}
+
 @media screen and (max-width: 600px) {
   .detail-quran-wrapper .header-detail {
+    width: 100%;
+  }
+  .detail-quran-wrapper .jump-verse {
     width: 100%;
   }
 }
