--- a/assets/scss/style/_qurandetail.scss
+++ b/assets/scss/style/_qurandetail.scss
@@ -12,7 +12,7 @@
     align-items: center;
     padding: 20px 22px;
     box-shadow: 0 5px 16px rgba(0, 0, 0, 0.07);
-    a {
+    span {
       text-decoration: none;
       color: $white;
       &:hover {
