--- a/assets/scss/style/_login.scss
+++ b/assets/scss/style/_login.scss
@@ -1,4 +1,5 @@
 .login-wrapper {
+  padding-bottom: 80px;
   min-height: 100vh;
   background-color: $green;
   font-family: "Mukta", sans-serif;
@@ -19,7 +20,7 @@
     }
     p {
       margin-top: 10px;
-      a {
+      span {
         color: $white;
       }
     }
@@ -40,7 +41,7 @@
     }
   }
 
-  a {
+  span {
     text-decoration: none;
   }
   select {
